src/styles/custom-props.css
:root {
  --colors-black0: #000000;
  --colors-black1: #353535;
  --colors-black2: #2c2c30;
  --colors-black3: #58585f;
  --colors-black4: #1a1a1a;
  --colors-gray0: #1a1a1a;
  --colors-gray1: #eeeeee;
  --colors-gray2: #f6f9fc;
  --colors-gray3: #dce6e9;
  --colors-green0: #01b18d;
  --colors-pink0: #e95495;
  --colors-purple0: #812991;
  --colors-white0: #ffffff;
  --colors-blue0: #00a2e2;
  --scrollbar-size: 8px;
  --sidebar-width: 280px;
  --container-max-width: 1268px;
  --container-padding: 0 20px;
  --docs-area-width: 1268px;
  --lg-primary: linear-gradient(89.92deg, #00bda6 0%, #00a2e2 132.46%);
  --text-link: var(--colors-blue0);
  --shadow-primary: #00000026;
  --docsearch-searchbox-height: 36px;
  --docsearch-spacing: 6px;
  --header-height: 64px;
}

:root.light {
  color-scheme: light;
  --text-primary: var(--colors-black0);
  --text-secondary: #707070;
  --docs-text-primary: #353535;
  --title-primary: #1a1a1a;
  --subtitle-primary: #707070;
  --toc-text-primary: #606060;
  --toc-text-link: #606060;
  --text-link-primary: var(--toc-text-link);
  --hr-primary: #d8d8d8;
  --hr-secondary: #e3e8ee;
  --bg-primary: var(--colors-white0);
  --bg-secondary: var(--colors-white0);
  --href-hover-primary: #e5e5e5;
  --copy-code-primary: var(--colors-white0);
  --code-bgColor: #f6f9fc;
  --code-borderColor: #dce6e9;
  --docs-footer-bg: #f6f6f6;
  --docs-footer-color: var(--colors-black0);
  --homepagehero-bg-image: url('/images/home/LightHeroImg.svg'),
    linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #fafdff 97.42%);
  --scrollbar-bg: #353535;
  --get-started-card-bg: #fff;
  --sidebar-link-primary: #353535;

  /* Light's on... */
  --dark-theme-display: none;
  --light-theme-display: flex;

  /* Algolia */
  --docsearch-searchbox--bg: #f6f6f6;
  --docsearch-text-color: var(--colors-black0);
  --docsearch-searchbox-focus-background: var(--colors-white0);
  --docsearch-searchbox-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px,
    rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px,
    rgba(60, 66, 87, 0.16) 0px 0px 0px 2px, rgba(0, 0, 0, 0) 0px 0px 0px 0px,
    rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px;
  --docsearch-text-color: var(--colors-black0);
  --docsearch-modal-background: var(--bg-primary);
  --docsearch-hit-background: #e7e7e7;
  --docsearch-hit-color: var(--colors-black0);
}

:root.dark {
  color-scheme: dark;
  --text-primary: var(--colors-white0);
  --text-secondary: #cbcbcb;
  --docs-text-primary: var(--colors-white0);
  --title-primary: var(--colors-white0);
  --subtitle-primary: var(--colors-white0);
  --toc-text-primary: var(--colors-white0);
  --toc-text-link: var(--colors-white0);
  --text-link-primary: var(--toc-text-link);
  --hr-primary: #d8d8d8;
  --hr-secondary: #2a2b2c;
  --bg-primary: var(--colors-black4);
  --bg-secondary: var(--colors-black1);
  --href-hover-primary: #4e4e4e;
  --copy-code-primary: var(--colors-white0);
  --code-bgColor: var(--colors-black2);
  --code-borderColor: var(--colors-black3);
  --docs-footer-bg: var(--colors-black0);
  --docs-footer-color: var(--colors-white0);
  --homepagehero-bg-image: url('/images/home/DarkHeroImg.svg'), #000000;
  --scrollbar-bg: #353535;
  --get-started-card-bg: #000000;
  --sidebar-link-primary: var(--colors-white0);

  /* Light's off... */
  --dark-theme-display: flex;
  --light-theme-display: none;

  /* Algolia */
  --docsearch-searchbox--bg: #1a1a1a;
  --docsearch-text-color: white;
  --docsearch-searchbox-focus-background: #1a1a1a;
  --docsearch-searchbox-shadow: rgb(116, 116, 116) 0px 0px 0px 0px,
    rgb(112, 112, 112) 0px 0px 0px 0px, rgb(255, 255, 255) 0px 0px 0px,
    rgb(80, 80, 80) 0px 0px 0px 2px, rgb(75, 75, 75) 0px 0px 0px 0px,
    rgb(114, 114, 114) 0px 0px 0px 0px, rgb(136, 136, 136) 0px 0px 0px 0px;
  --docsearch-searchbox-focus-background: #000;
  --docsearch-modal-background: var(--bg-primary);
  --docsearch-hit-background: #262626;
  --docsearch-hit-color: #cbcbcb;
}

html {
  scroll-behavior: smooth;
}

body {
  color: var(--text-primary);
  background-color: var(--bg-primary);
}

